--- a/zstyle.css
+++ b/zstyle.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     width: 100vw;
     height: 95vh;
-
+    background-color: rgba(56, 56, 56, 0.658);
 }
 
 h1 {
@@ -10,18 +10,27 @@ h1 {
 }
 
 #ZMap {
+    width: 80vw;
+    height: 75vh;
+    margin: auto;
+    border: solid black;
+}
+
+#info {
     display: flex;
     justify-content: flex-start;
-    align-items: flex-end;
+    align-items: flex-start;
     flex-direction: column;
     width: 80vw;
     height: 75vh;
     margin: auto;
 }
 
-#info {
+.list-group {
     z-index: 1;
+    position: absolute;
+    margin: 10px 5px 0px 10px;
     background: white;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
